--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "discord.js": "^14.13.0",
+    "dotenv": "^16.3.1",
+    "pg": "^8.11.3",
     "superagent": "^8.1.2"
   },
   "name": "discordbot",
