working database now

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,23 @@ version: '3'
 
 services:
   postgres:
-    image: postgres:latest
+    build:
+      context: ./database
+      dockerfile: Dockerfile
+    image: postgres:13  # Pinning to a specific version for stability
     environment:
+      POSTGRES_USER: postgres
       POSTGRES_PASSWORD: 160594
     ports:
       - "5432:5432"
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+
   discord:
     build:
       dockerfile: Dockerfile
     ports:
       - "3000:3000"
+
+volumes:
+  pgdata:
