--- a/bot/package.json
+++ b/bot/package.json
@@ -1,17 +1,20 @@
 {
   "dependencies": {
+    "cheerio": "^1.0.0-rc.12",
     "discord.js": "^14.13.0",
     "dotenv": "^16.3.1",
+    "ffmpeg": "^0.0.4",
+    "fluent-ffmpeg": "^2.1.2",
+    "node-fetch": "^3.3.2",
     "pg": "^8.11.3",
-    "superagent": "^8.1.2"
+    "stream": "^0.0.2",
+    "superagent": "^8.1.2",
+    "util": "^0.12.5"
   },
   "name": "discordbot",
   "description": "Discord bot project",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {
-    "eslint": "^8.49.0"
-  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
